@@ -1,3 +1,10 @@
+2016-05-26  Julien Bect  <julien.bect@centralesupelec.fr>
+
+	stk_example_doe05.m: Remove stopping condition based on EQI_max
+
+	* examples/02_design_of_experiments/stk_example_doe05.m: Remove
+	stopping condition based on EQI_max, which is never met anyway.
+
 2016-05-07  Julien Bect  <julien.bect@centralesupelec.fr>
 
 	stk_isnoisy: new function to test for a noisy model
